--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
   animated_text_kit: ^4.2.1
+  firebase_core: ^1.1.1
+  firebase_auth: ^1.1.4
+  cloud_firestore: ^2.1.0
 
+  # firebase_core: ^0.3.4
+  # firebase_auth: ^0.8.4+4
+  # cloud_firestore: ^0.9.13+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -33,6 +39,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
