--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.taskmanger">
    <application
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
         android:label="taskmanger"
         android:icon="@mipmap/ic_launcher">
         <activity
