--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   firebase_core: ^1.1.1
   firebase_auth: ^1.1.4
   cloud_firestore: ^2.1.0
-
+  auto_size_text: ^3.0.0-nullsafety.0
   # firebase_core: ^0.3.4
   # firebase_auth: ^0.8.4+4
   # cloud_firestore: ^0.9.13+1
